--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     implementation 'com.github.kittinunf.fuel:fuel:2.3.0'
     implementation 'com.github.kittinunf.fuel:fuel-android:2.3.0'
     implementation 'com.github.kittinunf.fuel:fuel-coroutines:2.3.0'
+    implementation 'androidx.preference:preference:1.1.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
