--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.2'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.2'
+    implementation "androidx.work:work-runtime-ktx:2.4.0"
     implementation 'com.github.kittinunf.fuel:fuel:2.3.0'
     implementation 'com.github.kittinunf.fuel:fuel-android:2.3.0'
     implementation 'com.github.kittinunf.fuel:fuel-coroutines:2.3.0'
