--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,7 @@ dependencies {
     implementation 'com.github.kittinunf.fuel:fuel-json:2.3.0'
     implementation 'androidx.preference:preference-ktx:1.1.1'
     implementation 'androidx.room:room-runtime:2.2.5'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
     kapt 'androidx.room:room-compiler:2.2.5'
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
